@@ -243,6 +243,7 @@ typedef struct mifare_desfire_aid *MifareDESFireAID;
 
 MifareDESFireAID mifare_desfire_aid_new (uint32_t aid);
 MifareDESFireAID mifare_desfire_aid_new_with_mad_aid (MadAid mad_aid, uint8_t n);
+uint32_t	 mifare_desfire_aid_get_aid (MifareDESFireAID aid);
 
 uint8_t		 mifare_desfire_last_picc_error (MifareTag tag);
 
